--- a/ios/FleetStarProt/Info.plist
+++ b/ios/FleetStarProt/Info.plist
@@ -68,6 +68,9 @@
 		<string>Lato-Regular.ttf</string>
 		<string>Lato-Thin.ttf</string>
 		<string>Lato-ThinItalic.ttf</string>
+		<string>MaterialCommunityIcons.ttf</string>
 	</array>
+
+
 </dict>
 </plist>
