--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/material-bottom-tabs": "^6.2.28",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.10.0",
+    "firebase": "^10.12.3",
     "react": "18.2.0",
     "react-native": "0.74.3",
     "react-native-paper": "^5.12.3",
@@ -29,6 +30,7 @@
     "@react-native/eslint-config": "0.74.85",
     "@react-native/metro-config": "0.74.85",
     "@react-native/typescript-config": "0.74.85",
+    "@types/bcrypt": "^5.0.2",
     "@types/react": "^18.2.6",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.0",
