--- a/server/package.json
+++ b/server/package.json
@@ -5,15 +5,19 @@
   "main": "server.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev":"ts-node-dev server.ts"
+    "dev": "ts-node-dev server.ts"
   },
   "author": "Kameer Hosein",
   "license": "ISC",
   "dependencies": {
+    "@types/cookie-parser": "^1.4.7",
+    "@types/cors": "^2.8.17",
+    "@types/express-session": "^1.18.0",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
     "mongoose": "^8.4.4",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0"
