--- a/package.json
+++ b/package.json
@@ -10,16 +10,21 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-firebase/app": "^20.2.0",
+    "@react-native-firebase/auth": "^20.2.0",
     "@react-navigation/bottom-tabs": "^6.6.0",
     "@react-navigation/material-bottom-tabs": "^6.2.28",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.10.0",
     "firebase": "^10.12.3",
+    "image360viewer": "^1.4.7",
     "react": "18.2.0",
     "react-native": "0.74.3",
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "^4.10.7",
     "react-native-screens": "^3.32.0",
+    "react-native-select-dropdown": "^4.0.1",
     "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
